# ClientForFrameWork

./: CMakeLists.txt  README.md
ClientForFrame/: CMakeLists.txt
ClientForFrame/src/: ClientMainWidget.cpp  ClientMainWidget.h  main.cpp
ClientForFrame/src/PicMatchComponent/: PicMatchWidget.cpp  PicMatchWidget.h
PicPlayer/: CMakeLists.txt
PicPlayer/src/: PicPlayerApi.cpp  PicPlayerApi.h  PicPlayerDataDef.h  PicPlayerGlobal.h  PicPlayer_global.h
PicPlayer/src/EventLoop/: CallableObject.h  EventLoop.cpp  EventLoop.h  EventMessage.h
PicPlayer/src/Imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_tables.cpp  imstb_truetype.h
PicPlayer/src/Imgui/glad/: glad.c  glad.h
PicPlayer/src/NodeDataDef/: NodesData.cpp  NodesData.h  NodesDataForDraw.cpp  NodesDataForDraw.h
PicPlayer/src/PlayerInstance/: PicPlayer.cpp  PicPlayer.h  PicPlayerCtrlBase.cpp  PicPlayerCtrlBase.h  PicPlayerCtrlDelegate.cpp  PicPlayerCtrlDelegate.h  PicPlayerGui.cpp  PicPlayerGui.h  PicPlayerHandleManager.cpp  PicPlayerHandleManager.h  PicPlayerShowWindow.cpp  PicPlayerShowWindow.h  PicPlayerWindowForMac.h  PicPlayerWindowForMac.mm
PicPlayer/src/Render/: PicPlayerMovieByScene.cpp  PicPlayerMovieByScene.h  PicPlayerRender.cpp  PicPlayerRender.h  PicPlayerRenderSync.cpp  PicPlayerRenderSync.h  PicPlayerScene.cpp  PicPlayerScene.h  PicPlayerVideoRender.cpp  PicPlayerVideoRender.h
PicPlayer/src/Render/DrawPicByImgui/: PicGeometry.cpp  PicGeometry.h  PicRenderForDraw.cpp  PicRenderForDraw.h  PicTexture.cpp  PicTexture.h
PicPlayer/src/Utils/: HandleRegister.h  IDGenerator.h  Singleton.h
src/: CMakeLists.txt  filter_agl_linker.sh
src/ClientForFrame/: CMakeLists.txt  QML_MIGRATION.md
src/ClientForFrame/src/: ClientMainWidget.cpp  ClientMainWidget.h  main.cpp  main_qml.cpp
src/ClientForFrame/src/Common/: ApplicationPaths.cpp  ApplicationPaths.h  BaseWidget.cpp  BaseWidget.h  ComponentLoader.cpp  ComponentLoader.h  CrashpadInit.cpp  CrashpadInit.h  MainWindowSetup.cpp  MainWindowSetup.h  StyleManager.cpp  StyleManager.h
src/ClientForFrame/src/PicMatchComponent/: FaceShowWidget.cpp  FaceShowWidget.h  PicMatchWidget.cpp  PicMatchWidget.h
src/ClientForFrame/src/QmlBridge/: AppController.cpp  AppController.h  PlayerHostItem.cpp  PlayerHostItem.h
src/ClientForFrame/src/TitleComponent/: TitleWidget.cpp  TitleWidget.h
src/ClientForFrame/src/resource/: qml.qrc  resource.qrc
src/ClientForFrame/src/resource/qml/: AppDesktop.qml  MainWindow.qml  PicMatchPage.qml  SettingsPage.qml  TitleBar.qml  main.qml
src/ClientForFrame/src/resource/qml/App/: AppDesktop.qml  qmldir
src/ClientForFrame/src/resource/styles/: dark_theme.qss  main_theme.qss
src/ClientForFrame/src/resource/themes/: dark.json  light.json
src/Common/: ErrorHandler.cpp  ErrorHandler.h  ResourceManager.h  ResourcePathManager.cpp  ResourcePathManager.h
src/Component/PicMatch_Component/: CMakeLists.txt
src/Component/PicMatch_Component/Interface/: IPlayerDataDef.cpp  IPlayerDataDef.h
src/Component/PicMatch_Component/SubComponent/PicPlayer/: CMakeLists.txt
src/Component/PicMatch_Component/SubComponent/PicPlayer/src/: PicPlayerApi.cpp  PicPlayerApi.h  PicPlayerDataDef.h  PicPlayerLog.h
src/Component/PicMatch_Component/SubComponent/PicPlayer/src/Imgui/: imgui_internal.h  imstb_textedit.h
src/Component/PicMatch_Component/SubComponent/PicPlayer/src/NodeDataDef/: NodesData.h  NodesDataForDraw.cpp
src/Component/PicMatch_Component/SubComponent/PicPlayer/src/PlayerInstance/: PicPlayer.cpp  PicPlayer.h  PicPlayerCtrlBase.cpp  PicPlayerCtrlBase.h  PicPlayerCtrlDelegate.cpp  (+8 more)
src/Component/PicMatch_Component/SubComponent/PicRecognition/: CMakeLists.txt
src/Component/PicMatch_Component/SubComponent/PicRecognition/src/: PicRecognitionGlobal.h
src/Component/PicMatch_Component/resource/: face_data_README.md  picmatch.qrc
src/Component/PicMatch_Component/resource/meta_info/: manifest.json
src/Component/PicMatch_Component/resource/qml/: PicMatchPage.qml
src/Component/PicMatch_Component/resource/qml/components/: FaceShowPanel.qml  PicMatchConfigPanel.qml  PicMatchToolBar.qml
src/Component/PicMatch_Component/resource/themes/: dark.json  light.json
src/Component/PicMatch_Component/src/: PicMatchComponentApi.cpp  PicMatchComponentApi.h  PicMatchComponentGlobal.h
src/Component/PicMatch_Component/src/Common/: BaseWidget.cpp  BaseWidget.h
src/Component/PicMatch_Component/src/ComponentInstance/: FaceShowWidget.cpp  FaceShowWidget.h  PicMatchWidget.cpp  PicMatchWidget.h
src/Component/PicMatch_Component/src/Core/: PicMatchModel.cpp  PicMatchModel.h
src/Component/PicMatch_Component/src/QmlBridge/: FaceImageProvider.cpp  FaceImageProvider.h  FaceListModel.cpp  FaceListModel.h  PicMatchViewModel.cpp  PicMatchViewModel.h  PlayerHostItem.cpp  PlayerHostItem.h
src/LogUtil/: LogUtil.h
src/PicPlayer/: CMakeLists.txt
src/PicPlayer/src/: PicPlayerApi.cpp  PicPlayerApi.h  PicPlayerDataDef.h
src/PicPlayer/src/EventLoop/: EventLoop.h
src/PicPlayer/src/Imgui/: imgui.h  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/PicPlayer/src/Imgui/glad/: glad.c
src/PicPlayer/src/Imgui/glad/KHR/: khrplatform.h
src/PicPlayer/src/NodeDataDef/: NodesData.h  NodesDataForDraw.cpp  NodesDataForDraw.h
src/PicPlayer/src/PlayerInstance/: PicPlayer.cpp  PicPlayer.h  PicPlayerCtrlBase.cpp  PicPlayerCtrlDelegate.cpp  PicPlayerShowWindow.cpp  PicPlayerShowWindow.h
src/PicPlayer/src/Render/: PicPlayerMovieByScene.cpp  PicPlayerRender.cpp  PicPlayerRenderSync.h  PicPlayerScene.h  PicPlayerVideoRender.h
src/PicPlayer/src/Render/DrawPicByImgui/: PicGeometry.cpp  PicGeometry.h  PicTexture.cpp  PicTexture.h
src/PicPlayer/src/Utils/: Singleton.h
src/PicRecognition/: CMakeLists.txt
src/PicRecognition/src/: PicRecognitionApi.cpp  PicRecognitionApi.h  PicRecognitionDataDef.h
src/PicRecognition/src/RecognitionInstance/: PicRecognitionObj.cpp  PicRecognitionObj.h
src/cmake/: FindThirdParty.cmake  PlatformConfig.cmake
src/doc/: 前后端分离整改计划.md  前后端分离整改计划_精简版.md
(+147 files in other folders)
